# sentinel-agent

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.integration.yml  install.sh  test-config.yaml
.github/workflows/: integration-test.yml  release.yml  tests.yml
src/: agent.rs  client.rs  config.rs  main.rs  metadata.rs  metrics.rs  oauth.rs  state.rs
tests/: integration_test.rs
tests/integration/: Dockerfile.agent  Dockerfile.agent-builder  Dockerfile.mock-api  mock_api_server.py  run_integration_test.sh  test-config-qemu.yaml  test-config.yaml
