[package]
name = "sentinel-agent"
version = "0.1.0"
edition = "2021"
description = "Operion Sentinel monitoring agent for system metrics"
license = "Apache-2.0"
repository = "https://github.com/operion/sentinel-agent"
homepage = "https://operion.com"
keywords = ["monitoring", "metrics", "agent", "operion"]
categories = ["command-line-utilities", "network-programming"]
authors = ["Operion Team <team@operion.com>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sysinfo = "0.30"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
gethostname = "0.4"
thiserror = "1.0"
